src/test/ui/extern/extern-ffi-fn-with-body.stderr
error: incorrect `fn` inside `extern` block
  --> $DIR/extern-ffi-fn-with-body.rs:2:8
   |
LL |   extern "C" {
   |   ------ `extern` blocks define existing foreign functions and `fn`s inside of them cannot have a body
LL |       fn foo() -> i32 {
   |  ________^^^__________-
   | |        |
   | |        can't have a body
LL | |         return 0;
LL | |     }
   | |_____- this body is invalid here
   |
   = help: you might have meant to write a function accessible through ffi, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: aborting due to previous error

